force-app/main/default/objects/CRMforNonProfit__Darujme_Settings__c/CRMforNonProfit__Darujme_Settings__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <label>Darujme Settings</label>
</CustomObject>