force-app/main/default/objects/CRMforNonProfit__Darujme_Settings__c/fields/CRMforNonProfit__API_ID__c.field-meta.xml
<CustomField>
    <fullName>CRMforNonProfit__API_ID__c</fullName>
    <label>API ID</label>
    <length>100</length>
    <required>true</required>
    <type>Text</type>
</CustomField>