force-app/main/default/objects/CRMforNonProfit__Darujme_Settings__c/fields/CRMforNonProfit__API_Key__c.field-meta.xml
<CustomField>
    <fullName>CRMforNonProfit__API_Key__c</fullName>
    <inlineHelpText>Stejne jako API ID</inlineHelpText>
    <label>API Key</label>
    <length>100</length>
    <required>true</required>
    <type>Text</type>
</CustomField>