force-app/main/default/objects/CRMforNonProfit__Darujme_Settings__c/fields/CRMforNonProfit__Contact_Secondary_Email_API_Name__c.field-meta.xml
<CustomField>
    <fullName>CRMforNonProfit__Contact_Secondary_Email_API_Name__c</fullName>
    <description>API Name of field on Contact which should be used for darujme transaction pairing</description>
    <inlineHelpText>API Name of field on Contact which should be used for darujme transaction pairing</inlineHelpText>
    <label>Contact Secondary Email API Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>