force-app/main/default/objects/CRMforNonProfit__Darujme_Settings__c/fields/CRMforNonProfit__CreateContacts__c.field-meta.xml
<CustomField>
    <fullName>CRMforNonProfit__CreateContacts__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Create Contacts</label>
    <type>Checkbox</type>
</CustomField>