force-app/main/default/objects/CRMforNonProfit__Darujme_Settings__c/fields/CRMforNonProfit__CustomFieldsMapping__c.field-meta.xml
<CustomField>
    <fullName>CRMforNonProfit__CustomFieldsMapping__c</fullName>
    <description>Parovaci tabulka mezi custom atributem z DarujmeAPI a Salesforce Darujme_Pledge fieldem.</description>
    <inlineHelpText>Optional - Zadejte parovaci tabulku mezi custom atributem z DarujmeAPI a Darujme_Pledge fieldem oddelenou :. Vice paru oddelte mezi sebou ;. Priklad: var_symb:fpack40__Custom_Fields__c;spec_symb:fpack40__Custom_Field5__c</inlineHelpText>
    <label>CustomFieldsMapping</label>
    <length>255</length>
    <type>Text</type>
</CustomField>