force-app/main/default/objects/CRMforNonProfit__Darujme_Settings__c/fields/CRMforNonProfit__Notification_email__c.field-meta.xml
<CustomField>
    <fullName>CRMforNonProfit__Notification_email__c</fullName>
    <description>Email addres for technical notifications about API callouts and processing</description>
    <label>Notification email</label>
    <type>Email</type>
</CustomField>