force-app/main/default/objects/CRMforNonProfit__Darujme_Settings__c/fields/CRMforNonProfit__Sync_Batch_Size__c.field-meta.xml
<CustomField>
    <fullName>CRMforNonProfit__Sync_Batch_Size__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Number of Pledges to be processed in one batch as future call. All Pledges processed in one batch if not set or zero.</description>
    <label>Sync Batch Size</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>