force-app/main/default/objects/CRMforNonProfit__Darujme_Settings__c/fields/CRMforNonProfit__Sync_Last_N_days__c.field-meta.xml
<CustomField>
    <fullName>CRMforNonProfit__Sync_Last_N_days__c</fullName>
    <inlineHelpText>Zde nastavíme kolik dní zpátky chceme synchronizovat – nastavíme na 1, v případě, že jsme posílání do Salesforce vypnuli dnes.</inlineHelpText>
    <label>Sync Last N days</label>
    <precision>5</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>