force-app/main/default/objects/CRMforNonProfit__Darujme_Settings__c/fields/CRMforNonProfit__Sync_Last_N_days_to__c.field-meta.xml
<CustomField>
    <fullName>CRMforNonProfit__Sync_Last_N_days_to__c</fullName>
    <description>Urcuje koncovy pocet dnu - tzn. pokud se v Sync Last N days da 4 a v tomto poli 2, tak to stahne transakce za D-4, D-3, D-2</description>
    <inlineHelpText>Optional - Urcuje koncovy pocet dnu - tzn. pokud se v Sync Last N days da 4 a v tomto poli 2, tak to stahne transakce za D-4, D-3, D-2</inlineHelpText>
    <label>Sync Last N days To</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>